# CrossBinary_console

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
include/: config.h
include/binary/: binary.h  m_elf.h  m_pe.h
src/: main.cpp
src/binary/: binary.cpp
